# prism-agents-selfhosted

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  ROADMAP.md  append_tests.js  code_review.py  commit_message.txt  docker-compose.yml  patch.diff  patch2.diff  patch3.diff  patch_pr.py  pr_description.md  render.yaml  test_perf.js  test_perf_react.js  update_api_tests.js
.Jules/: palette.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/prisma/: schema.prisma
backend/prisma/migrations/20260412202843_media_agents/: migration.sql
backend/prisma/migrations/20260416123016_add_billing_fields/: migration.sql
backend/prisma/migrations/20260418141122_add_teams/: migration.sql
backend/prisma/migrations/20260614204650_add_api_keys/: migration.sql
backend/scripts/: sync_analytics_traits.py
backend/src/media_agents/: __init__.py  env.py  main.py  main.py.orig
backend/tests/: conftest.py  test_admin_auth.py  test_admin_router.py  test_admin_service.py  test_agent_maker.py  test_analytics.py  test_analytics_traits.py  test_api_key_auth.py  test_api_key_router.py  test_api_key_service.py  test_attachment_validation.py  test_chat_router_helpers.py  test_credits.py  test_document_extractor.py  test_fal_client.py  test_generations_router_helpers.py  test_github_oauth.py  test_jwt.py  test_local_auth.py  test_model_threading.py  test_multimodal_messages.py  test_orchestrator.py  test_pwd_utils.py  test_self_hosted.py  test_specialist_agents.py  test_team_dag_executor.py  test_team_planner.py
(+131 files in other folders)
