[project]
name = "media-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles 'Nik' Nichols", email = "nik@vizionikmedia.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fal>=1.72.1",
    "fal-client>=0.13.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.10.0",
    "pydantic-ai>=1.102.0",
    "prisma>=0.11.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.30.6",
    # Pinning the real `griffe` package — `pydantic-ai-slim`'s transitive dep
    # `griffelib==2.0.2` is broken (installs files at `griffe/` but its
    # `__init__.py` imports from non-existent `_griffe.*` namespace).
    "griffe>=1.5,<2",

    "posthog>=3.7.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "pypdf>=6.13.3",
    "python-docx>=1.1.0",
]

[project.scripts]
media-agents = "media_agents:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
